--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -20,6 +21,8 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^11.5.6",
     "geist": "^1.2.1",
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
@@ -28,6 +31,7 @@
     "novel": "^0.5.0",
     "prettier": "^3.3.3",
     "react": "18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.2.0",
     "sonner": "^1.5.0"
   },
