--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
     "next": "^14.2.7",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "novel": "^0.5.0",
     "prettier": "^3.3.3",
