--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.5.6",
     "geist": "^1.2.1",
