--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -22,6 +25,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tailwindcss/typography": "^0.5.15",
+    "@types/mdx": "^2.0.13",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -40,6 +45,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
+    "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
     "vaul": "^0.9.6",
     "zod": "^3.23.8"
