--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start"
   },
@@ -9,7 +9,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.0.3",
+    "@next/mdx": "15.0.3",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -32,18 +32,19 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^11.5.6",
     "geist": "^1.2.1",
     "lexical": "^0.17.1",
     "lucide-react": "^0.436.0",
-    "next": "^14.2.7",
+    "next": "15.0.3",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.3.0",
     "novel": "^0.5.0",
     "prettier": "^3.3.3",
-    "react": "18.2.0",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.5.0",
@@ -52,12 +53,16 @@
   },
   "devDependencies": {
     "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "postcss": "8.4.33",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
+  },
+  "resolutions": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
