--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "types": "./scripts/generate-types.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
